--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -23,7 +23,7 @@
                     <button class="stop-btn" type="button" title="Detener grabación" style="display: none;">
                         <i class="fas fa-stop"></i>
                     </button>
-                    </div>
+                </div>
             </div>
             
             <div class="form-group">
@@ -82,6 +82,39 @@
                     <button class="stop-btn" type="button" title="Detener grabación" style="display: none;">
                         <i class="fas fa-stop"></i>
                     </button>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Cumplimiento Especificaciones</label>
+                <div class="input-with-icon">
+                    <select class="form-input" data-api-name="Cumplimiento__x0020__Especificacione">
+                        <option value="SI">SI</option>
+                        <option value="NO">NO</option>
+                        <option value="N/A">N/A</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Certificación de Calidad</label>
+                <div class="input-with-icon">
+                    <select class="form-input" data-api-name="Certificaci__x00f3__n__x0020__de__x0">
+                        <option value="SI">SI</option>
+                        <option value="NO">NO</option>
+                        <option value="N/A">N/A</option>
+                    </select>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label>Condiciones del Material</label>
+                <div class="input-with-icon">
+                    <select class="form-input" data-api-name="Condiciones__x0020__del__x0020__Mate">
+                        <option value="Bueno">Bueno</option>
+                        <option value="Regular">Regular</option>
+                        <option value="Malo">Malo</option>
+                    </select>
                 </div>
             </div>
 
