--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label>ITEM</label>
                 <div class="input-with-icon">
-                    <input type="text" inputmode="numeric" class="form-input" data-api-name="ITEM" placeholder="Número de ítem">
+                    <input type="number" class="form-input" data-api-name="ITEM" placeholder="Número de ítem">
                     <button class="record-btn" type="button" title="Grabar respuesta">
                         <i class="fas fa-microphone"></i>
                     </button>
@@ -75,7 +75,7 @@
             <div class="form-group">
                 <label>Cantidad</label>
                 <div class="input-with-icon">
-                    <input type="text" inputmode="decimal" class="form-input" data-api-name="Cantidad" placeholder="0.00">
+                    <input type="number" class="form-input" data-api-name="Cantidad" placeholder="0.00">
                     <button class="record-btn" type="button" title="Grabar respuesta">
                         <i class="fas fa-microphone"></i>
                     </button>
