--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -169,7 +169,7 @@
 
             <div class="save-container">
                 <button type="button" id="save-form-button" class="save-button">
-                    <i class="fas fa-save"></i> Guardar Formulario
+                    <i class="fas fa-save"></i> Actualizar Formulario
                 </button>
             </div>
 
