--- a/static/PrincipalScreen.css
+++ b/static/PrincipalScreen.css
@@ -72,7 +72,7 @@ body, html {
 }
 
 .button1, .button2 {
-  background-color: #FF6600;
+  background-color: #0A76D8;
   color: white;
   padding: 10px 15px;
   border-radius: 5px;
@@ -85,7 +85,7 @@ body, html {
 
 .button3 {
   background-color: transparent;
-  color: #FF6600;
+  color: #0A76D8;
   border: none;
   cursor: pointer;
   text-align: center;
