--- a/static/registros.css
+++ b/static/registros.css
@@ -129,7 +129,7 @@ body, html {
 }
 
 .bottom-button {
-    background-color: #FF6600;
+    background-color: #0A76D8;
     color: white;
     padding: 10px 15px;
     border-radius: 10px;
@@ -148,7 +148,7 @@ body, html {
 }
 
 .bottom-button:hover {
-    background-color: #d86111;
+    background-color: #0463bc;
 }
 
 /* Botón de agregar nuevo proyecto */
@@ -158,7 +158,7 @@ body, html {
 }
 
 .add-project-button {
-    background-color: #FF6600;
+    background-color: #0A76D8;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -169,7 +169,7 @@ body, html {
 }
 
 .add-project-button:hover {
-    background-color: #d86111;
+    background-color: #0463bc;
 }
 
 /* Ajustes responsivos para los botones */
@@ -217,7 +217,7 @@ body, html {
 }
 
 .dropdown-item:hover {
-    background-color: #FF6600;
+    background-color: #0463bc;
     color: #fff;
 }
 
